<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity"
    android:background="@drawable/login">

    <Button
        android:id="@+id/buttonlogin"
        android:layout_width="247dp"
        android:layout_height="69dp"
        android:layout_marginStart="83dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="88dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="218dp"
        android:layout_height="41dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="448dp"
        android:layout_marginEnd="41dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="Enter email"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordl"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_marginStart="144dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="104dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="Enter password"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/buttonlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/displayLoginResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>